Fixes dialog on ios

--- a/site/_scss/events-main.scss
+++ b/site/_scss/events-main.scss
@@ -71,6 +71,7 @@
   dialog {
     border: 0;
     border-radius: 4px;
+    height: auto;
     margin: get-size(1000) 0 0 auto;
     max-height: 80vh;
     overflow-y: scroll;
